# graphics_engine

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  conanfile.py  conanfile.txt  layout.ini
examples/graph/: CMakeLists.txt  main.cpp  main.cxx
examples/hex_grid/: CMakeLists.txt  main.cpp  main.cxx
examples/polygons/: CMakeLists.txt  main.cpp  main.cxx
examples/square_grid/: CMakeLists.txt  main.cpp  main.cxx
examples/texture/: CMakeLists.txt  main.cpp
examples/texture_2d/: CMakeLists.txt  main.cpp  main.cxx
examples/texture_3d/: CMakeLists.txt  main.cpp  main.cxx
ge/: CMakeLists.txt
ge/include/ge/: graphics_engine.h
ge/src/: debug_callback.h  exception.cpp  exception.h  graphics_engine.cpp  graphics_engine_impl.cpp  graphics_engine_impl.h  queue.h  safe_cast.hpp  safe_cast_impl.hpp
ge/src/factory/: command_pool.cpp  factory_tools.hpp  framebuffer.cpp  framebuffer.h  image_view.h  instance.cpp  instance.h  options.h  semaphore.cpp  semaphore.h  shader.cpp  shader.h  swapchain.cpp  tools.hpp
ge/src/factory/device/: device_tools.cpp  logical.cpp  logical.h  physical.cpp  physical.h  requirements.h  tools.cpp  tools.h
ge/src/factory/image_view/: image_view_factory.h
ge/src/factory/instance/: instance_factory.h
ge/src/factory/pipeline/: shader_stage.cpp  shader_stage.h
ge/src/factory/shader/: module.cpp  module.h
ge/src/factory/swapchain/: swapchain_factory.cpp
ge/src/storage/: shaders.cpp  shaders.h
ge/src/utils/: safe_cast_impl.hpp
ge/src/window/: window.cpp  window.h
ge/src/window/linux/: window_xcb.cpp  window_xcb.h
modules/common/: CMakeLists.txt
modules/common/ge/common/: bits_range.hpp  bits_range.ixx  bits_range_impl.hpp  exception.cxx  exception.h  exception.ixx  exception_macro.h  flags.ixx  flags_impl.hpp  log.cpp  log.cxx  log.hpp  log.ixx  log_impl.hpp  logger.cpp  logger.cxx  logger.hpp  logger.ixx  logger_impl.hpp  overloaded.hpp  overloaded.ixx  safe_cast.hpp  safe_cast.ixx  safe_cast_impl.hpp
modules/common/tests/: bits_range.cpp  bits_range.ixx  log.cpp  log.ixx  reflection.cpp  reflection.ixx  safe_cast.cpp  safe_cast.ixx
modules/geometry/: CMakeLists.txt
modules/geometry/ge/geometry/: concepts.hpp  convert_between_flat_and_pointy.cpp  convert_between_flat_and_pointy.cxx  convert_between_flat_and_pointy.h  convert_between_flat_and_pointy.ixx  coord_helpers.hpp  coord_helpers.ixx  coord_helpers_impl.hpp  cs_hex_flat.cpp  cs_hex_flat.cxx  cs_hex_flat.hpp  cs_hex_flat.ixx  cs_hex_flat_impl.hpp  cs_hex_pointy.cxx  cs_hex_pointy.ixx  cs_hex_pointy_impl.hpp  cs_square_flat.ixx  cs_square_flat_impl.hpp  cs_square_pointy.hpp  cs_square_pointy.ixx  cs_square_pointy_impl.hpp  geometry_concepts.ixx  hex_coord_cube_fractional.ixx  hex_coord_cube_fractional_impl.hpp  hex_coord_rotate.ixx  line_ref.ixx  point.ixx  point_impl.hpp  point_localization.hpp  point_localization.ixx  point_localization_impl.hpp  sign.hpp  sign.ixx  surface_normalized_coords.h  surface_normalized_coords.ixx  texture_coords.h  texture_coords.ixx  world_2d_coords.h  world_2d_coords.ixx  world_3d_coords.h  (+1 more)
modules/geometry/tests/: cs_hex_flat.ixx  cs_hex_pointy.cpp  cs_hex_pointy.ixx  cs_square_flat.ixx  hex_coord_rotate.cpp  hex_coord_rotate.ixx  point_localization.cpp  point_localization.ixx
modules/io/: CMakeLists.txt
modules/io/ge/io/: image.cpp  image.cxx  image.h  image.ixx  model.cpp  model.cxx  model.h  model.ixx  read_image.cpp  read_image.cxx  read_image.h  read_image.ixx  read_model.cpp  read_model.cxx  read_model.h  read_model.ixx  triangle_indexed.h  triangle_indexed.ixx  vertex.h  vertex.ixx
modules/io/tests/: read_image.cpp  read_image.ixx  read_model.cpp  read_model.ixx
modules/render/: CMakeLists.txt
modules/render/ge/render/: buffer.cpp  buffer.h  camera_2d.cpp  camera_2d.h  camera_2d_mover.cpp  camera_2d_mover.h  color.h  color.ixx  command_buffer.h  command_pool.h  coords.h  create_pipeline_layout.cpp  create_render_pass.h  debug_callback.cpp  debug_callback.h  descriptor_pool.cpp  descriptor_pool.h  descriptor_set.cpp  descriptor_set.h  device.cpp  device.h  direction.h  exception.cpp  exception.h  extent.h  extent.ixx  framebuffer.cpp  framebuffer.h  instance.cpp  instance.h  log_vulkan.hpp  log_vulkan_impl.hpp  object_transform.h  queue.cpp  queue.h  render_base.cpp  render_base.cxx  render_base.h  render_base.ixx  render_i.cpp  (+14 more)
modules/render/tests/: log_vulkan.cpp  log_vulkan.ixx
modules/render_loop/: CMakeLists.txt
modules/render_loop/ge/render_loop/: render_2d_loop.cpp  render_2d_loop.cxx  render_2d_loop.h  render_2d_loop.ixx  render_3d_loop.cpp  render_3d_loop.cxx  render_3d_loop.h  render_3d_loop.ixx  render_loop.cpp  render_loop.h
modules/shader_compiler/: CMakeLists.txt
modules/shader_compiler/ge/shader_compiler/: main.cxx  shader_compiler.cpp  shader_compiler.cxx  shader_compiler.h  shader_compiler.ixx
modules/window/: CMakeLists.txt
modules/window/ge/window/: surface_coords.h  surface_coords.ixx  window_events.h  window_events.ixx  window_i.cpp  window_i.cxx  window_i.h  window_i.ixx  window_size.h  window_size.ixx
src/render/: CMakeLists.txt  debug_callback.cpp  exception.cpp  queue.h  render.cpp  render.h  render_impl.cpp  render_impl.h
src/render/factory/: command_buffer.cpp  command_buffer.h  command_pool.cpp  command_pool.h  fence.cpp  framebuffer.cpp  image_view.cpp  image_view.h  instance.cpp  instance.h  semaphore.cpp  swapchain.cpp  swapchain.h  tools.cpp  tools.hpp  tools_impl.hpp
src/render/factory/device/: logical.cpp  logical.h  physical.cpp  physical.h  requirements.cpp  (+3 more)
src/render/render/: debug_callback.cpp  exception.cpp  render.cpp  render_impl.cpp  render_impl.h
src/render/storage/: shaders.cpp
src/render/utils/: safe_cast.hpp  safe_cast_impl.hpp
src/render/window/: window.cpp  window.h
test/: CMakeLists.txt  graphics_engine.cpp
test/common/: safe_cast.cpp
test/common/utils/: safe_cast.cpp
test/graphics/: graphics_engine.cpp  render.cpp
test/graphics/factory/: image_view.cpp  instance.cpp  shader.cpp  swapchain.cpp  test_tools.cpp  test_tools.h
(+696 files in other folders)
